# osu2piu

./: .dockerignore  .env.example  .gitignore  Makefile  PLAN.md  README.md  WEBAPP.md  compose.dev.yml  corpus_stats.json  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
engine/: Dockerfile
osu2piu/: __main__.py  api.py  beginner.py  chartjson.py  convert.py  generator.py  holds.py  matcher.py  metrics.py  osu_parser.py  patterns.py  sm_parser.py  ssc_writer.py  timing.py
web/: Dockerfile
web/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/frontend/src/: api.ts  main.tsx  metrics.ts  play.ts  store.ts  styles.css  timing.ts  types.ts  validate.ts
web/frontend/src/components/: AudioEditor.tsx  MetricsPanel.tsx
web/frontend/src/notefield/: Notefield.tsx  noteskin.ts  sprites.ts
web/frontend/src/pages/: ChartPage.tsx  HomePage.tsx  ProjectPage.tsx
web/server/: package-lock.json  package.json
web/server/src/: config.ts  engine.ts  index.ts  osu.ts  routes.ts  store.ts  types.ts
